--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 
 
 
-<p> "Bip bop her er jeg" </p>
-<p> "Bip bop her er jeg" </p>
-<p> "Bip bop her er jeg" </p>
-<p> "Bip bop her er jeg" </p>
-<p> "Bip bop her er jeg" </p>
-<p> "Bip bop her er jeg" </p>
+<p> "You are gay" </p>
+<p> "You are gay" </p>
+<p> "You are gay" </p>
+<p> "You are gay" </p>
+<p> "You are gay" </p>
 
 
 </body>
